refactor: remove root start_date, add recurrence.end_date, rename every_days to every_n_days
